Fixed some stuff
fixed overflowing problem with food list. Media queries looking good. Just need the smallest one working. removed underscores in lox meat pie title

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,6 +8,8 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 3em;
+    display: flex;
+    flex-direction: column;
 }
 
 .body > h1 {
