--- a/src/FoodIcon.module.css
+++ b/src/FoodIcon.module.css
@@ -84,3 +84,15 @@ img {
 .progressBars {
     position: relative;
 }
+@media only screen and (max-width: 1050px) {
+    .foodIcon {
+        width: 6em;
+        height: 6em;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .foodIconContainer{
+        width: 7.5em;
+        height: 8.5em;
+    }
+  }
