--- a/src/SelectedFood.module.css
+++ b/src/SelectedFood.module.css
@@ -21,7 +21,9 @@
         margin-right: auto;
         width: 90%;
     }
-
+    .main{
+        height: 11em;
+    }
     .main > div > div:nth-child(2) > div:nth-child(2) {
         margin: 0;
         background-color: red;
