--- a/src/StatBar.module.css
+++ b/src/StatBar.module.css
@@ -6,7 +6,7 @@
 
 .barStyles{
     width: 100%;
-    padding: 1em;
+    padding: 0em;
     display: flex;
 }
 
